Fix spacing in the Content grid #2150

--- a/src/main/resources/assets/admin/common/styles/api/ui/treegrid/tree-grid.less
+++ b/src/main/resources/assets/admin/common/styles/api/ui/treegrid/tree-grid.less
@@ -107,11 +107,7 @@
           color: @admin-button-blue1;
         }
 
-        display: inline-block;
-        position: relative;
-        height: 100%;
-        text-align: center;
-        margin-right: 17px;
+        margin-right: 12px;
         flex-basis: 24px;
         flex-grow: 0;
         flex-shrink: 0;
